Library linking of more than one level doesn't pass animation #36754

Closed
opened 2013-09-17 19:22:57 +02:00 by Kai Kostack · 5 comments

%%%I currently do a larger project with many mechanical stuff and moving parts, so I tried to break up and sort out individual animations into many smaller libraries which are then linked into larger libraries adding the smaller animations together to one large rig. The problem arises with the second level libraries whose animations aren't visible in the main scene, the original data and actions from that libs are visible in the dope sheet but no animation shows up in viewport.

Example: Robot

  • Main scene: Linked in animatable robot in environment
  • Library 1: Complete robot rig, limbs are linked in from deeper library level because they have individual detail animations
  • Library 2: Animation of the details of one limb (think of rotating gear wheels)

It appears that the detail animation of the limbs from the second level aren't passed to the main scene or aren't evaluated there anymore for some reason.

I have attached an example scene with a very simple rig group linked via two levels into the main scene, when I there press Alt+A I would expect the cube to move. Would be nice if this could be fixed.

I'm on windows 7 64, tested with official release.
%%%

%%%I currently do a larger project with many mechanical stuff and moving parts, so I tried to break up and sort out individual animations into many smaller libraries which are then linked into larger libraries adding the smaller animations together to one large rig. The problem arises with the second level libraries whose animations aren't visible in the main scene, the original data and actions from that libs are visible in the dope sheet but no animation shows up in viewport. Example: Robot - Main scene: Linked in animatable robot in environment - Library 1: Complete robot rig, limbs are linked in from deeper library level because they have individual detail animations - Library 2: Animation of the details of one limb (think of rotating gear wheels) It appears that the detail animation of the limbs from the second level aren't passed to the main scene or aren't evaluated there anymore for some reason. I have attached an example scene with a very simple rig group linked via two levels into the main scene, when I there press Alt+A I would expect the cube to move. Would be nice if this could be fixed. I'm on windows 7 64, tested with official release. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Issue confirmed... Campbell, do you have a hint here?%%%

%%%Issue confirmed... Campbell, do you have a hint here?%%%

%%%It's a depsgraph issue, more my area. Fix in svn revision 60222, thanks for the report.

By the way, there's some strange things in these files. In lib_level1.blend you assigned an action to the cube, but this contains armature bone animation, so it will do nothing as the animation channels don't map to anything in the mesh object. In main_scene.blend that action is assigned to the dupli empty, and also will do nothing. Probably that was just done for testing to try to get this working.%%%

%%%It's a depsgraph issue, more my area. Fix in svn revision 60222, thanks for the report. By the way, there's some strange things in these files. In lib_level1.blend you assigned an action to the cube, but this contains armature bone animation, so it will do nothing as the animation channels don't map to anything in the mesh object. In main_scene.blend that action is assigned to the dupli empty, and also will do nothing. Probably that was just done for testing to try to get this working.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Yes, the assigned actions are leftovers from testing. I tried a workaround in the first level lib by reassigning the action to a proxy of the linked in armature from the second level. Thanks for the quick fix, just in time.%%%

%%%Yes, the assigned actions are leftovers from testing. I tried a workaround in the first level lib by reassigning the action to a proxy of the linked in armature from the second level. Thanks for the quick fix, just in time.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36754
No description provided.