Fix #36754: animation not evaluated on object two levels down in dupligroups. Depsgraph would only consider one level, now it works recursive.